@@ -16,7 +16,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
 #
-# $Id: md5x.tcl,v 1.4 2004/02/18 23:54:08 patthoyts Exp $
+# $Id: md5x.tcl,v 1.5 2004/02/24 07:31:34 andreas_kupries Exp $
 
 package require Tcl 8.2;                # tcl minimum version
 
@@ -32,7 +32,7 @@ if {[catch {package require tcllibc}]} {
 
 namespace eval ::md5 {
     variable version 2.0.0
-    variable rcsid {$Id: md5x.tcl,v 1.4 2004/02/18 23:54:08 patthoyts Exp $}
+    variable rcsid {$Id: md5x.tcl,v 1.5 2004/02/24 07:31:34 andreas_kupries Exp $}
 
     namespace export md5 hmac MD5Init MD5Update MD5Final
 
