@@ -1,6 +1,2 @@
 set tcllib_version 1.6.0.1
 set tcllib_name    tcllib
-
-
-
-
