@@ -1,8 +1,8 @@
 2004-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
-	* md4.tcl:  Streamlined the rotate-left function and fixed a rare
-	bug that occurs if the hash result produces a hypen as the first
-	character and we are using Trf's hex function.
+	* md4.tcl: Streamlined the rotate-left function and fixed a rare
+	  bug that occurs if the hash result produces a hypen as the first
+	  character and we are using Trf's hex function.
 
 2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
