@@ -1,3 +1,8 @@
+2004-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* tcllib_version.tcl: Moving mainline to 1.6.0.1 to distinguish
+	  development from the released version.
+
 2004-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* modules/ripemd: New module: RIPEMD message-digest implementation
